// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OtherLoanAmountField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd gdvYxl"
    >
      <input
        class="sc-kEqYlL jzZEFj"
        id="otherLoanAmountField"
        name="name"
        placeholder="Kwota obecnych zobowiązań finansowych"
        type="text"
        value="test"
      />
      <span
        class="sc-dIsAE idqcHK"
      >
        PLN
      </span>
      <span
        class="sc-jrsJCI djVSvf"
      >
        Podany kwota jest nieprawidłowa
      </span>
    </div>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot 1`] = `
<input
  class="sc-kEqYlL honwIS"
  id="otherLoanAmountField"
  name="name"
  placeholder="Kwota obecnych zobowiązań finansowych"
  type="text"
  value=""
/>
`;

exports[`<OtherLoanAmountField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd gdvYxl"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <input
        class="sc-kEqYlL jzZEFj"
        id="otherLoanAmountField"
        label="Test"
        name="name"
        placeholder="Kwota obecnych zobowiązań finansowych*"
        required=""
        type="text"
        value=""
      />
      <span
        class="sc-dIsAE idqcHK"
      >
        PLN
      </span>
      <span
        class="sc-jrsJCI djVSvf"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd gdvYxl"
    >
      <label
        for="name"
      >
        Test
      </label>
      <input
        class="sc-kEqYlL honwIS"
        id="otherLoanAmountField"
        label="Test"
        name="name"
        placeholder="Kwota obecnych zobowiązań finansowych"
        type="text"
        value=""
      />
      <span
        class="sc-dIsAE idqcHK"
      >
        PLN
      </span>
    </div>
  </form>
</div>
`;
